# apps/api/src/main/java/to/bconnect/api/core/domain/company/CompanyService.java
@@ -8,6 +8,8 @@ import org.springframework.transaction.annotation.Transactional;
 import to.bconnect.api.attachment.domain.AttachmentLinker;
 import to.bconnect.api.common.CodeException;
 import to.bconnect.api.common.CommonExceptionCode;
+import to.bconnect.api.common.request.CursorLimit;
+import to.bconnect.api.common.response.CursorPage;
 import to.bconnect.api.security.AuthUser;
 import to.bconnect.api.storage.attachment.ReferenceType;
 import to.bconnect.api.storage.company.CompanyEntity;
@@ -24,11 +26,17 @@ public class CompanyService {
     private final AttachmentLinker attachmentLinker;
 
     @Transactional(readOnly = true)
-    public List<Company> list() {
-        return companyRepository.findAll()
-                .stream()
-                .map(Company::of)
-                .toList();
+    public CursorPage<Company> list(CursorLimit cursor) {
+        val companies = companyRepository.findAllBy(
+                cursor.toScrollPosition(),
+                cursor.toLimit(),
+                cursor.toSort()
+        );
+
+        return CursorPage.from(
+                companies.map(Company::of),
+                Company::id
+        );
     }
 
     @Transactional(readOnly = true)
