# packages/api-client/src/openapi.yaml
@@ -585,13 +585,19 @@ paths:
       tags:
       - profile-controller
       operationId: list_1
+      parameters:
+      - name: cursorLimit
+        in: query
+        required: true
+        schema:
+          $ref: "#/components/schemas/CursorLimit"
       responses:
         "200":
           description: OK
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ApiResponseListProfileResponse"
+                $ref: "#/components/schemas/ApiResponseCursorPageProfileResponse"
     post:
       tags:
       - profile-controller
@@ -725,13 +731,19 @@ paths:
       tags:
       - member-controller
       operationId: list_2
+      parameters:
+      - name: cursorLimit
+        in: query
+        required: true
+        schema:
+          $ref: "#/components/schemas/CursorLimit"
       responses:
         "200":
           description: OK
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ApiResponseListMemberResponse"
+                $ref: "#/components/schemas/ApiResponseCursorPageMemberResponse"
     post:
       tags:
       - member-controller
@@ -1038,13 +1050,19 @@ paths:
       tags:
       - company-controller
       operationId: list_7
+      parameters:
+      - name: cursorLimit
+        in: query
+        required: true
+        schema:
+          $ref: "#/components/schemas/CursorLimit"
       responses:
         "200":
           description: OK
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ApiResponseListCompanyResponse"
+                $ref: "#/components/schemas/ApiResponseCursorPageCompanyResponse"
     post:
       tags:
       - company-controller
@@ -1424,13 +1442,19 @@ paths:
       tags:
       - feed-controller
       operationId: list_10
+      parameters:
+      - name: cursorLimit
+        in: query
+        required: true
+        schema:
+          $ref: "#/components/schemas/CursorLimit"
       responses:
         "200":
           description: OK
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ApiResponseListFeedResponse"
+                $ref: "#/components/schemas/ApiResponseCursorPageFeedResponse"
   /api/v1/feeds/{id}:
     get:
       tags:
@@ -1579,13 +1603,19 @@ paths:
       tags:
       - crawled-member-controller
       operationId: list_11
+      parameters:
+      - name: cursorLimit
+        in: query
+        required: true
+        schema:
+          $ref: "#/components/schemas/CursorLimit"
       responses:
         "200":
           description: OK
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ApiResponseListCrawledMemberSummaryResponse"
+                $ref: "#/components/schemas/ApiResponseCursorPageCrawledMemberSummaryResponse"
   /api/v1/crawled-members/{id}:
     get:
       tags:
@@ -3049,7 +3079,18 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/MemberSummaryResponse"
-    ApiResponseListProfileResponse:
+    CursorLimit:
+      type: object
+      properties:
+        cursor:
+          type: integer
+          format: int64
+        limit:
+          type: integer
+          format: int32
+        reverse:
+          type: boolean
+    ApiResponseCursorPageProfileResponse:
       type: object
       properties:
         success:
@@ -3057,9 +3098,19 @@ components:
         error:
           $ref: "#/components/schemas/ExceptionCode"
         data:
+          $ref: "#/components/schemas/CursorPageProfileResponse"
+    CursorPageProfileResponse:
+      type: object
+      properties:
+        content:
           type: array
           items:
             $ref: "#/components/schemas/ProfileResponse"
+        hasNext:
+          type: boolean
+        nextCursor:
+          type: integer
+          format: int64
     ProfileResponse:
       type: object
       properties:
@@ -3208,17 +3259,6 @@ components:
           $ref: "#/components/schemas/ExceptionCode"
         data:
           $ref: "#/components/schemas/ProfileResponse"
-    CursorLimit:
-      type: object
-      properties:
-        cursor:
-          type: integer
-          format: int64
-        limit:
-          type: integer
-          format: int32
-        reverse:
-          type: boolean
     ApiResponseCursorPageNotificationResponse:
       type: object
       properties:
@@ -3279,7 +3319,7 @@ components:
       - referenceType
       - sender
       - type
-    ApiResponseListMemberResponse:
+    ApiResponseCursorPageMemberResponse:
       type: object
       properties:
         success:
@@ -3287,9 +3327,19 @@ components:
         error:
           $ref: "#/components/schemas/ExceptionCode"
         data:
+          $ref: "#/components/schemas/CursorPageMemberResponse"
+    CursorPageMemberResponse:
+      type: object
+      properties:
+        content:
           type: array
           items:
             $ref: "#/components/schemas/MemberResponse"
+        hasNext:
+          type: boolean
+        nextCursor:
+          type: integer
+          format: int64
     MemberResponse:
       type: object
       properties:
@@ -3503,7 +3553,7 @@ components:
         nextCursor:
           type: integer
           format: int64
-    ApiResponseListFeedResponse:
+    ApiResponseCursorPageFeedResponse:
       type: object
       properties:
         success:
@@ -3511,9 +3561,19 @@ components:
         error:
           $ref: "#/components/schemas/ExceptionCode"
         data:
+          $ref: "#/components/schemas/CursorPageFeedResponse"
+    CursorPageFeedResponse:
+      type: object
+      properties:
+        content:
           type: array
           items:
             $ref: "#/components/schemas/FeedResponse"
+        hasNext:
+          type: boolean
+        nextCursor:
+          type: integer
+          format: int64
     FeedResponse:
       type: object
       properties:
@@ -3767,7 +3827,7 @@ components:
       - note
       - status
       - type
-    ApiResponseListCrawledMemberSummaryResponse:
+    ApiResponseCursorPageCrawledMemberSummaryResponse:
       type: object
       properties:
         success:
@@ -3775,9 +3835,7 @@ components:
         error:
           $ref: "#/components/schemas/ExceptionCode"
         data:
-          type: array
-          items:
-            $ref: "#/components/schemas/CrawledMemberSummaryResponse"
+          $ref: "#/components/schemas/CursorPageCrawledMemberSummaryResponse"
     CrawledMemberSummaryResponse:
       type: object
       properties:
@@ -3880,6 +3938,18 @@ components:
       - state
       - trades
       - url
+    CursorPageCrawledMemberSummaryResponse:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: "#/components/schemas/CrawledMemberSummaryResponse"
+        hasNext:
+          type: boolean
+        nextCursor:
+          type: integer
+          format: int64
     ApiResponseCrawledMemberResponse:
       type: object
       properties:
@@ -4160,7 +4230,7 @@ components:
       - id
       - member
       - profile
-    ApiResponseListCompanyResponse:
+    ApiResponseCursorPageCompanyResponse:
       type: object
       properties:
         success:
@@ -4168,9 +4238,7 @@ components:
         error:
           $ref: "#/components/schemas/ExceptionCode"
         data:
-          type: array
-          items:
-            $ref: "#/components/schemas/CompanyResponse"
+          $ref: "#/components/schemas/CursorPageCompanyResponse"
     CompanyResponse:
       type: object
       properties:
@@ -4202,6 +4270,18 @@ components:
       - modifiedAt
       - name
       - picture
+    CursorPageCompanyResponse:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: "#/components/schemas/CompanyResponse"
+        hasNext:
+          type: boolean
+        nextCursor:
+          type: integer
+          format: int64
     ApiResponseCompanyResponse:
       type: object
       properties:
